# my_log

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build_and_run.bat
include/: file_helper.hpp  log.hpp  log_stream.hpp  log_wrapper.hpp  os.hpp  profiler.hpp  queue.hpp
include/my_log/: file_helper.hpp  lazy_string.hpp  log.hpp  os.hpp  rang.hpp
src/: main.cc
test/: file_helper_unittest.cc  lazy_string_unittest.cc  log_stream_unittest.cc  log_wrapper_unittest.cc  profiler_unittest.cc
tools/: check.bat  cpplint-tool.bat
